--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -23,38 +23,38 @@
 
 
         <li class="list-divider"></li>
-        <li class="sidebar-item">
-          <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">
-            <i data-feather="file-text" class="feather-icon"></i>
-            <span class="hide-menu">Master Data</span>
-          </a>
-          <ul aria-expanded="false" class="collapse  first-level base-level-line">
-            <li class="sidebar-item">
-              <a href="ivcs_view" class="sidebar-link">
-                <span class="hide-menu">Category</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a href="ivcs_view" class="sidebar-link">
-                <span class="hide-menu">Ph Category</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a href="ivcs_view" class="sidebar-link">
-                <span class="hide-menu">Waiting List </span>
-              </a>
-            </li>
+<!--        <li class="sidebar-item">-->
+<!--          <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">-->
+<!--            <i data-feather="file-text" class="feather-icon"></i>-->
+<!--            <span class="hide-menu">Master Data</span>-->
+<!--          </a>-->
+<!--          <ul aria-expanded="false" class="collapse  first-level base-level-line">-->
+<!--            <li class="sidebar-item">-->
+<!--              <a href="ivcs_view" class="sidebar-link">-->
+<!--                <span class="hide-menu">Category</span>-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li class="sidebar-item">-->
+<!--              <a href="ivcs_view" class="sidebar-link">-->
+<!--                <span class="hide-menu">Ph Category</span>-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li class="sidebar-item">-->
+<!--              <a href="ivcs_view" class="sidebar-link">-->
+<!--                <span class="hide-menu">Waiting List </span>-->
+<!--              </a>-->
+<!--            </li>-->
 
 
-            <!--            <li class="sidebar-item">-->
-            <!--              <a href="ivcs_view" class="sidebar-link">-->
-            <!--                <span class="hide-menu"> View</span>-->
-            <!--              </a>-->
-            <!--            </li>-->
-          </ul>
-        </li>
+<!--            &lt;!&ndash;            <li class="sidebar-item">&ndash;&gt;-->
+<!--            &lt;!&ndash;              <a href="ivcs_view" class="sidebar-link">&ndash;&gt;-->
+<!--            &lt;!&ndash;                <span class="hide-menu"> View</span>&ndash;&gt;-->
+<!--            &lt;!&ndash;              </a>&ndash;&gt;-->
+<!--            &lt;!&ndash;            </li>&ndash;&gt;-->
+<!--          </ul>-->
+<!--        </li>-->
 
-        <li class="list-divider"></li>
+<!--        <li class="list-divider"></li>-->
         <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
                                      aria-expanded="false"><i data-feather="file-text" class="feather-icon"></i><span
                 class="hide-menu">Reports </span></a>
@@ -67,7 +67,12 @@
             </li>
             <li class="sidebar-item">
               <a href="merit_list" class="sidebar-link">
-                <span class="hide-menu">Merit List</span>
+                <span class="hide-menu">Add to Merit List</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a href="view_merit_list" class="sidebar-link">
+                <span class="hide-menu">View Merit List</span>
               </a>
             </li>
             <li class="sidebar-item">
