Added CheckList with Counselling Date

--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -66,13 +66,13 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a href="merit_list" class="sidebar-link">
-                <span class="hide-menu">Add to Merit List</span>
+              <a href="check_list" class="sidebar-link">
+                <span class="hide-menu">Check List</span>
               </a>
             </li>
             <li class="sidebar-item">
               <a href="view_merit_list" class="sidebar-link">
-                <span class="hide-menu">View Merit List</span>
+                <span class="hide-menu">Merit List</span>
               </a>
             </li>
             <li class="sidebar-item">
