--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -87,6 +87,18 @@
 <!--           </li>-->
           </ul>
         </li>
+        <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
+                                     aria-expanded="false"><i data-feather="file-text" class="feather-icon"></i><span
+                class="hide-menu">Tasks </span></a>
+          <ul aria-expanded="false" class="collapse  first-level base-level-line">
+
+            <li class="sidebar-item">
+              <a href="add_merit_list" class="sidebar-link">
+                <span class="hide-menu">Add to Merit List</span>
+              </a>
+            </li>
+          </ul>
+        </li>
 
 
 
